--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular": "^1.6.8",
     "angular-chat": "^1.0.9",
     "angular-route": "^1.6.8",
+    "angular-ui-notification": "^0.3.6",
     "rltm": "^1.3.1"
   }
 }
