--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-chat": "^1.0.9",
     "angular-route": "^1.6.8",
     "angular-ui-notification": "^0.3.6",
+    "body-parser": "^1.18.2",
     "rltm": "^1.3.1"
   }
 }
